<resources>
    <string name="app_name">foodly</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">Continue</string>
<string name="lbl_l">l</string>
<string name="lbl_chocolate_chip">Chocolate Chip</string>
<string name="lbl_logout">Logout</string>
<string name="lbl_take_away">Take away</string>
<string name="lbl_email_address">Email address</string>
<string name="lbl_s">s</string>
<string name="msg_confirm_passwor">COnfirm password</string>
<string name="msg_45_refer_to_fri">45-Refer to friends</string>
<string name="msg_21_single_resta">21-Single restaurant/VTwo</string>
<string name="msg_max_delivery_fe">Max Delivery Fee</string>
<string name="lbl_reset_password">Reset password</string>
<string name="msg_colarodo_san_f">Colarodo, San Francisco</string>
<string name="msg_split_bread_r">Split Bread - Russian</string>
<string name="lbl_sandwich">Sandwich</string>
<string name="lbl_pizza">Pizza </string>
<string name="lbl_incl_vat"> (incl. VAT)</string>
<string name="lbl_new_password">New password</string>
<string name="lbl_nawaf_azim">Nawaf Azim</string>
<string name="lbl_phone_number">Phone number</string>
<string name="lbl_recent_address">Recent address</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_password2">password</string>
<string name="msg_35_order_detail">35-Order details</string>
<string name="msg_29_search_resta">29-Search Restaurants</string>
<string name="msg_find_restaurant">Find restaurants near you </string>
<string name="msg_promotional_not">Promotional Notifications</string>
<string name="lbl_state_bird">State Bird</string>
<string name="msg_it_s_seems_like">It\u2019s seems like you don\u2019t add any credit or debit card. You may easily add card.</string>
<string name="msg_choice_of_botto">Choice of Bottom Cookie</string>
<string name="lbl_top_restaurants">Top Restaurants</string>
<string name="lbl_mexican">Mexican</string>
<string name="lbl_22_add_to_order">22-Add to order</string>
<string name="lbl_icons_34_34">Icons  34*34</string>
<string name="lbl_combo_sandwich">Combo Sandwich</string>
<string name="lbl_clear_all">Clear all</string>
<string name="lbl_combo_burger">Combo Burger</string>
<string name="msg_enter_the_4_dig">Enter the 4-Digit code sent to you at +1501333982</string>
<string name="lbl_1501333982">+1501333982</string>
<string name="msg_search_new_addr">Search new address</string>
<string name="msg_33_search_resul">33-Search results/VTwo</string>
<string name="lbl_09_sign_up_vtwo">09-Sign up/VTwo</string>
<string name="msg_fried_rice_on_p">Fried Rice on Pot</string>
<string name="lbl_clear_al">Clear al</string>
<string name="msg_this_card_will">This card will only be charged when you place an order.</string>
<string name="lbl_cvc">CVC</string>
<string name="lbl_new_restaurants">New Restaurants</string>
<string name="lbl_g">g</string>
<string name="lbl_42">+4</string>
<string name="lbl_funfetti">Funfetti</string>
<string name="lbl_price_range">price range</string>
<string name="lbl_usd7_4">USD7.4</string>
<string name="msg_12_enter_addres">12-Enter Address</string>
<string name="lbl_rich_table">Rich Table</string>
<string name="lbl_oyster_on_ice">Oyster On Ice</string>
<string name="lbl_25min">25min</string>
<string name="msg_20_single_resta">20-Single restaurant/VOne</string>
<string name="msg_checkout_11_9">Checkout ($11.98)</string>
<string name="lbl_sort_by">Sort by</string>
<string name="lbl_30_search_food">30-Search food</string>
<string name="msg_11_confirm_phon">11-Confirm phone number</string>
<string name="lbl_icons_24_242">Icons(24*24)</string>
<string name="msg_49_find_restaur">49-Find Restaurants</string>
<string name="msg_36_order_detail">36-Order details</string>
<string name="lbl_icons_24_24">Icons  24*24</string>
<string name="lbl_sea_foods">Sea Foods</string>
<string name="msg_please_enter_yo">Please enter your location or allow access to your location to find restaurants near you.</string>
<string name="lbl_type_of_foods">Type of Foods</string>
<string name="msg_shortbread_cho">Shortbread, chocolate turtle cookies, and red velvet.</string>
<string name="msg_add_credit_card">Add credit cards</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_32">$3</string>
<string name="msg_18_featured_par">18-Featured partners/VOne</string>
<string name="lbl_featured_items">Featured Items</string>
<string name="msg_25_filters_food">25-Filters/food type/VOne</string>
<string name="lbl_password">Password</string>
<string name="lbl_nawf">Nawf|</string>
<string name="msg_we_have_sent_a">We have sent a instructions email to Nawfazim@icloud.com.</string>
<string name="lbl_rate_us">Rate Us</string>
<string name="msg_you_ve_to_order">You\u2019ve to order at least $10 for using free delivery for 1 month.</string>
<string name="msg_reset_email_sen">Reset email sent</string>
<string name="msg_for_daily_updat">For daily update you will get it</string>
<string name="lbl_scan_card">Scan Card</string>
<string name="lbl_fast_food">Fast Food</string>
<string name="lbl_american">American</string>
<string name="msg_add_social_acco">Add Social Accounts</string>
<string name="lbl_deafult_payment">Deafult Payment</string>
<string name="lbl_dietary">Dietary</string>
<string name="lbl_usd7">USD7.</string>
<string name="lbl_complete">Complete</string>
<string name="msg_forget_password">Forget Password?</string>
<string name="lbl_phone_number2">Phone Number</string>
<string name="msg_white_chocolate">White Chocolate Macadamia</string>
<string name="msg_best_picks_rest">Best Picks Restaurants by team</string>
<string name="lbl_22">2</string>
<string name="lbl_25">25</string>
<string name="msg_enter_your_name">Enter your Name, Email and Password for sign up.</string>
<string name="msg_https_ui8_net">https://ui8.net/76738b</string>
<string name="msg_you_placed_the">You placed the order successfully. You will get your food within 25 minutes. Thanks for using our services. Enjoy your food :)</string>
<string name="msg_39_profile_sett">39-Profile settings</string>
<string name="lbl_categories">Categories</string>
<string name="lbl_vegetarian">Vegetarian</string>
<string name="lbl_501_333_2982">(501)333-2982</string>
<string name="lbl_4_5">4.5</string>
<string name="lbl_keep_browsing">Keep Browsing</string>
<string name="lbl_cotogna">Cotogna</string>
<string name="lbl_most_popular">Most Popular</string>
<string name="lbl_4_8">4.8</string>
<string name="lbl_change_password">Change Password</string>
<string name="lbl_mastercard">MasterCard</string>
<string name="msg_breakfast_bru">Breakfast &amp; Brunch</string>
<string name="lbl_4_3">4.3 </string>
<string name="lbl_12">$1</string>
<string name="lbl_13">+1</string>
<string name="lbl_peanut_butter">Peanut Butter</string>
<string name="lbl_get_started">Get Started</string>
<string name="lbl_10">$10</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_usd12">USD12.</string>
<string name="lbl_delivery_to">Delivery to</string>
<string name="lbl_23_your_orders">23-Your Orders</string>
<string name="lbl_appetizers">Appetizers</string>
<string name="msg_nawafazim_iclou">Nawafazim@icloud.com</string>
<string name="lbl_cookie_sandwich">Cookie Sandwich</string>
<string name="lbl_soups_123">Soups (123)</string>
<string name="lbl_burgers_120">Burgers (120)</string>
<string name="msg_choice_of_top_c">Choice of top Cookie</string>
<string name="msg_add_facebook_t">Add Facebook, Twitter etc </string>
<string name="msg_31_searching_fo">31-Searching food</string>
<string name="msg_connect_with_go">Connect with google</string>
<string name="lbl_43_locations">43-Locations</string>
<string name="lbl_01">01</string>
<string name="lbl_pizza_187">Pizza (187)</string>
<string name="lbl_mcdonald_s2">McDonald\u2019s</string>
<string name="lbl_02_walkthrough">02-Walkthrough</string>
<string name="lbl_42_card_list">42-Card list</string>
<string name="msg_37_homepag_view">37-Homepag/View order</string>
<string name="lbl_mm_yy">MM/YY</string>
<string name="lbl_07_reset_email">07-Reset email</string>
<string name="msg_15_homepage_vtw">15-Homepage/VTwo</string>
<string name="lbl_minutes">Minutes</string>
<string name="msg_top_pick_restau">Top Pick Restaurants</string>
<string name="lbl_apply_filters">Apply filters</string>
<string name="msg_add_or_remove_y">Add or remove your delivery locations</string>
<string name="lbl_brunch">Brunch</string>
<string name="lbl_beef_lamb">Beef &amp; Lamb</string>
<string name="msg_mixt_yerba_bu">Mixt - Yerba Buena</string>
<string name="lbl_5_0">5.0</string>
<string name="lbl_more">MOre</string>
<string name="msg_just_my_luck_n">Just my luck, no ice. Must go faster. Did he just throw my cat out of the window</string>
<string name="lbl_promo_code">Promo code</string>
<string name="lbl_bakery">Bakery</string>
<string name="msg_enter_your_emai">Enter your email address and we will send you a reset instructions.</string>
<string name="msg_add_your_credit">Add your credit &amp; debit cards</string>
<string name="msg_choose_your_foo">Choose your food</string>
<string name="msg_connect_with_fa">Connect with Facebook</string>
<string name="lbl_or">Or</string>
<string name="lbl_welcome_to">Welcome to</string>
<string name="lbl_seafood">Seafood</string>
<string name="msg_14_homepage_von">14-Homepage/VOne</string>
<string name="lbl_orders">Orders</string>
<string name="msg_use_current_loc">Use current location</string>
<string name="msg_by_signing_up_y">By Signing up you agree to our Terms Conditions &amp; Privacy Policy.</string>
<string name="msg_one_of_the_best">One of the best and so much good food corner in Colarodo. Specially the burger, Lemonade.</string>
<string name="lbl_type">Type</string>
<string name="msg_frequently_aske">Frequently asked questions</string>
<string name="lbl_vegan">Vegan</string>
<string name="lbl_having_problem">Having problem?</string>
<string name="msg_17_homepage_vfo">17-Homepage/VFour</string>
<string name="lbl_email_address2">Email Address</string>
<string name="lbl_san_francisco">San Francisco</string>
<string name="msg_scan_your_card">Scan Your Card :)</string>
<string name="lbl_past_orders">Past orders</string>
<string name="lbl_full_name2">Full name</string>
<string name="lbl_not_deafult">Not Deafult</string>
<string name="lbl4">$$$$</string>
<string name="lbl_price_range2">Price Range</string>
<string name="lbl5">******</string>
<string name="lbl2">$</string>
<string name="lbl3">$$$</string>
<string name="lbl_home">Home</string>
<string name="msg_shortbread_cho2">Shortbread, chocolate turtle cookies, and red velvet. 8 ounces cream cheese, softened.</string>
<string name="lbl_change_settings">Change settings</string>
<string name="msg_push_notificati">Push Notifications</string>
<string name="msg_already_have_ac">Already have account?</string>
<string name="msg_easily_find_you">Easily find your type of food craving and you\u2019ll get delivery in wide range.</string>
<string name="lbl_login_to_foodly">Login to Foodly</string>
<string name="lbl_your_orders">Your Orders</string>
<string name="lbl_sign_in">Sign In</string>
<string name="lbl_subway">Subway</string>
<string name="lbl_snickerdoodle">Snickerdoodle</string>
<string name="msg_great_food_i_li">Great food I like this place, I think best place of Colarodo. Chilling with Friends :)</string>
<string name="lbl_forgot_password2">Forgot password</string>
<string name="msg_san_francisco2">San Francisco, CA</string>
<string name="lbl_resend_again">Resend Again.</string>
<string name="lbl_any">any</string>
<string name="lbl_gluten_free">Gluten-Free</string>
<string name="lbl_create_account">Create Account</string>
<string name="lbl_1">1</string>
<string name="lbl_forgot_password">Forgot Password</string>
<string name="lbl_full_name">Full Name</string>
</resources>