<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpVoneVM" type="com.foodly.app.modules.signupvone.data.viewmodel.SignUpVoneVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linear08SignupVOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearBarsTopbars1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylewhite_A700">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="@dimen/_8pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgotPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginEnd="@dimen/_125pxh"
                    android:layout_marginStart="@dimen/_89pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_weight="0.94"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{signUpVoneVM.signUpVoneModel.txtForgotPassword}"
                    style="@style/txtSFProTextsemibold16" tools:text="@string/lbl_forgot_password"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtCreateAccount"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{signUpVoneVM.signUpVoneModel.txtCreateAccount}"
            style="@style/txtSFProDisplaymedium34" tools:text="@string/lbl_create_account"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtEnteryourName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:singleLine="true"
            android:text="@{signUpVoneVM.signUpVoneModel.txtEnteryourName}"
            style="@style/txtSFProTextregular16" tools:text="@string/msg_enter_your_name"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtAlreadyhaveac"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{signUpVoneVM.signUpVoneModel.txtAlreadyhaveac}"
            style="@style/txtSFProTextregular16_5" tools:text="@string/msg_already_have_ac"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_gray_100_radius_6"
            android:ellipsize="end" android:hint="@string/lbl_full_name"
            android:id="@+id/etForm1Deactive" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={signUpVoneVM.signUpVoneModel.etForm1DeactiveValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_gray_100_radius_6"
            android:ellipsize="end"
            android:hint="@string/lbl_email_address2"
            android:id="@+id/etForm1DeactiveOne"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={signUpVoneVM.signUpVoneModel.etForm1DeactiveOneValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_gray_100_radius_6"
            android:drawableEnd="@drawable/img_eye_bluegray_400"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etForm1DeactiveTwo"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_25pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={signUpVoneVM.signUpVoneModel.etForm1DeactiveTwoValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="true" style="@style/btnSolidRounded_2" tools:text="@string/lbl_sign_up"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtTermAndCondition"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:text="@{signUpVoneVM.signUpVoneModel.txtTermAndCondition}"
            style="@style/txtSFProTextregular16" tools:text="@string/msg_by_signing_up_y"/>
        <TextView android:ellipsize="end" android:id="@+id/txtOr"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{signUpVoneVM.signUpVoneModel.txtOr}"
            style="@style/txtSFProTextregular16_1" tools:text="@string/lbl_or"/>
        <EditText
            android:background="@drawable/rectangle_bg_indigo_600_radius_8"
            android:drawablePadding="@dimen/_30pxh"
            android:drawableStart="@drawable/drawable_img_facebook"
            android:ellipsize="end"
            android:hint="@string/msg_connect_with_fa"
            android:id="@+id/etFacebook" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={signUpVoneVM.signUpVoneModel.etFacebookValue}"
            android:textAllCaps="true"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearGoogle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_100pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStyleblue_A200cornerRadius">
            <ImageView android:id="@+id/imageFloatingicon"
                android:layout_height="@dimen/_28pxh"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="@dimen/_28pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_floatingicon"
                tools:ignore="ContentDescription" tools:src="@drawable/img_floatingicon"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtConnectwithgo"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_85pxh"
                android:layout_marginStart="@dimen/_41pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_weight="0.85" android:layout_width="0dp"
                android:letterSpacing="0.04"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{signUpVoneVM.signUpVoneModel.txtConnectwithgo}"
                android:textAllCaps="true"
                style="@style/txtSFProTextsemibold12" tools:text="@string/msg_connect_with_go"/>
        </LinearLayout>
    </LinearLayout>
</layout>
